# rd_character_talking

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml
apps/api/agents/: __init__.py  brain_agent.py  emotion_agent.py  knowledge_agent.py
apps/api/config/: characters.yaml  settings.py  voices.py
apps/api/crews/: __init__.py  character_crew.py
apps/api/db/: connection.py
apps/api/db/migrations/: 001_initial.sql  run.py
apps/api/models/: schemas.py
apps/api/services/: credentials.py  llm.py  nova_sonic.py  speech.py  speech_elevenlabs.py  speech_fast.py  speech_gemini.py  speech_streaming.py  speech_voicevox.py  voice_emotion.py  webrtc_service.py
apps/api/tools/: __init__.py  database.py  mcp_server.py  mcp_tools.py  polly.py  transcribe.py
apps/web/: Dockerfile  Dockerfile.dev  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/assets/css/: main.css
apps/web/components/character/: Avatar.vue
apps/web/components/chat/: Bubble.vue  Window.vue
apps/web/components/voice/: Input.vue  Player.vue
apps/web/composables/: useAudioQueue.ts  useCharacter.ts  useTranscribeStreaming.ts  useVoiceRecorder.ts  useWaitingAudio.ts  useWebRTC.ts  useWebSocket.ts
apps/web/pages/: index.vue
apps/web/public/character/: talk.lottie
apps/web/types/: lottie.d.ts
docs/: AWS_SERVICES_SETUP.md  SEQUENCE_DIAGRAM.md
