[project]
name = "character-api"
version = "1.0.0"
description = "AI Character Voice Interaction API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-socketio>=5.11.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "crewai>=0.80.0",
    "crewai-tools>=0.17.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    "boto3>=1.35.0",
    "aioboto3>=13.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "mcp>=1.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "agents", "crews", "tools", "services", "models", "db"]

[tool.hatch.build.targets.sdist]
include = ["*.py", "config", "agents", "crews", "tools", "services", "models", "db"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

